[gd_scene load_steps=5 format=3 uid="uid://cqamg7hyrm2a7"]

[ext_resource type="Script" path="res://Scripts/Interfaces/storm_code_interface.gd" id="1_12d1d"]
[ext_resource type="Texture2D" uid="uid://bh4bk6c6yf6l1" path="res://Imports/images/2d_ui_bg.png" id="2_k4clt"]
[ext_resource type="Script" path="res://Scripts/Interfaces/storm_code_label.gd" id="4_krqfg"]
[ext_resource type="FontFile" uid="uid://dcbx28e77cfxv" path="res://Imports/fonts/SpecialElite.ttf" id="6_iscsx"]

[node name="storm_code_interface" type="Node2D"]
script = ExtResource("1_12d1d")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.08, 1.08)
texture = ExtResource("2_k4clt")

[node name="BackButton" type="Button" parent="."]
offset_left = -393.0
offset_top = 287.0
offset_right = -175.0
offset_bottom = 425.0
theme_override_colors/font_hover_pressed_color = Color(0.486275, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.12549, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.737255, 0, 0, 1)
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_iscsx")
theme_override_font_sizes/font_size = 90
text = "Back"

[node name="StormCodeLabel" type="Label" parent="."]
offset_left = -859.0
offset_top = -426.0
offset_right = 298.0
offset_bottom = -128.0
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_iscsx")
theme_override_font_sizes/font_size = 100
text = "Incorrect Calibration"
script = ExtResource("4_krqfg")

[node name="SearchButton" type="Button" parent="."]
offset_left = -850.0
offset_top = 100.0
offset_right = 277.0
offset_bottom = 238.0
theme_override_colors/font_hover_pressed_color = Color(0.486275, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.12549, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.737255, 0, 0, 1)
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_iscsx")
theme_override_font_sizes/font_size = 90
text = "Search for Storm Origin"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SearchButton" to="." method="_on_search_button_pressed"]
